# aioquerysaur

./: README.rst  pyproject.toml
aioquerysaur/: __init__.py  loader.py  models.py  queries.py
aioquerysaur/adapters/: aiosqlite.py  psycopg2.py  sqlite3.py
aioquerysaur/loaders/: text.py
tests/: conftest.py  test_aiosqlite.py  test_loading.py  test_sqlite3.py
tests/sql/: items.sql
tests/sql/dir/: items1.sql
tests/sql/dir/nested/: items2.sql
