[tool.poetry]
name = "aioquerysaur"
version = "0.1.0"
description = "package inspired by aiosql, for research use only"
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/jnosal/aioquerysaur"
repository = "https://github.com/jnosal/aioquerysaur"
authors = ["Jacek Nosal <jacek.nosal@outlook.com>"]
keywords = ["SQL", "asyncio"]
classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-mock = "^3.3.1"
black = "^20.8b1"
flake8 = "^3.8.4"
aiosqlite = "^0.15.0"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
